# openenv_student_planner

./: .gitignore  Dockerfile  README copy.md  README.md  deployment.md  inference.py  must_pass.md  openenv.yaml  pyproject.toml  structure.md
scripts/: benchmark_scores.py  validate-submission.sh
server/: app.py
src/student_planner/: __init__.py  client.py  env.py  grader.py  models.py  tasks.py
tests/: test_env.py  test_grader.py  test_inference_logging.py  test_server_api.py
training/: grpo_train.py
