[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "student-planner-openenv"
version = "0.1.0"
description = "Deterministic Student Planner OpenEnv benchmark"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "httpx>=0.27.0",
  "websockets>=12.0",
  "openai>=1.40.0",
  "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
train = [
  "trl>=0.20.0",
  "transformers>=4.46.0",
  "datasets>=3.0.0",
  "accelerate>=0.34.0",
  "vllm>=0.10.2",
  "trackio>=0.4.0",
]
test = [
  "pytest>=8.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
